# invoice-generator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
docs/: SRS_Invoice_Generator.md  SRS_Invoice_Generator_v2.md  user-stories-invoice-generator.md
src/: error.rs  locale.rs  main.rs
src/cli/: common.rs  error.rs  generate_cmd.rs  interactive.rs  mod.rs  preset_cmd.rs  recipient_cmd.rs  recipient_selection.rs
src/config/: error.rs  loader.rs  mod.rs  path.rs  types.rs  validator.rs  writer.rs
src/domain/: currency.rs  hex_color.rs  iban.rs  mod.rs  non_empty.rs  payment_method_key.rs  preset_key.rs  recipient_key.rs
src/invoice/: currency.rs  display.rs  error.rs  line_item.rs  mod.rs  period.rs  preset_creation.rs  preset_selection.rs  summary.rs  types.rs
src/pdf/: data.rs  error.rs  mod.rs  world.rs
src/pdf/template/: amalthea.typ  callisto.typ  invoice.typ  leda.typ  metis.typ  thebe.typ
src/setup/: branding.rs  defaults.rs  mock_prompter.rs  mod.rs  payment.rs  presets.rs  prompter.rs  prompts.rs  recipient.rs  sender.rs  summary.rs  test_helpers.rs
