[package]
name = "invoice-generator"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
comemo = "0.4"
etcetera = "0.11"
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
tempfile = "3"
thiserror = "2"
time = "0.3"
typst = "0.14"
typst-kit = { version = "0.14", features = ["embed-fonts"] }
typst-pdf = "0.14"
